@@ -64,6 +64,9 @@ Changes
 
 * Improved debug logging of file hashes in depend mode.
 
+* Improved handling of various `-g*` options. In particular, ccache now
+  understands that `-g0` cancels out previous `-g* options`.
+
 
 ccache 3.6
 ----------
